--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,8 @@
             <li>paul</li>
             <li>reddy</li>
             <li>kalluru</li>
+            <li>nickname : Bannu</li>
+
         </ul>
     </body>
 </html>
