--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
             <li>paul</li>
             <li>reddy</li>
             <li>kalluru</li>
-            <li>nickname : Bannu</li>
+            <li>nickname : Bannu @ Nani</li>
 
         </ul>
     </body>
