--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
         <ul>
             <li>rithin</li>
             <li>paul</li>
-            <li>reddy</li>
+            <li>redy</li>
             <li>kalluru</li>
             <li>nickname : Bannu @ Nani</li>
 
