--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
             <li>rithin</li>
             <li>paul</li>
             <li>reddy</li>
-            <li>kalluru</li>
+            <li>kallur</li>
             <li>nickname : Bannu</li>
 
         </ul>
